Added package.json types field and changed ambient module declaration name to ash.ts

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "typescript": {
     "main": "src/ash/index.ts"
   },
+  "types": "./dist/ash.d.ts",
   "scripts": {
     "build": "bnr build-client",
     "dev": "bnr watch-client",
